some performance improvements

--- a/sass/color.sass
+++ b/sass/color.sass
@@ -22,7 +22,7 @@ $nav-color: $theme-EEE
 $main-background: $transparent
 
 // link
-$link-color: $theme-main
+$link-color: $theme-main-darker
 
 // card
 $card-background: $theme-FFF
