--- a/sass/tweak.sass
+++ b/sass/tweak.sass
@@ -25,6 +25,8 @@ pre
 .card img, .card video
   display: block
   max-width: 100%
+  aspect-ratio: 4/3
+  object-fit: contain
   margin: auto
 
 // blockquote
