--- a/templates/shortcodes/content_image.html
+++ b/templates/shortcodes/content_image.html
@@ -2,6 +2,6 @@
 {% set image_path = resize_image(path=fullpath, width=800, height=600, op = "fit") %}
 <p>
     <a href="{{ path }}" target=”_blank”>
-        <img src="{{ image_path.url }}" {% if alt %}alt="{{ alt }}"{% endif %}>
+        <img src="{{ image_path.url }}" {% if alt %}alt="{{ alt }}"{% endif %} decoding="async" loading="lazy" width="100%" height="100%">
     </a>
 </p>
