--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -4,15 +4,19 @@
 @font-face
     font-family: "Inter Regular"
     src: url($base-url + "fonts/Inter-Regular.otf") format("opentype")
+    font-display: swap
 
 @font-face
      font-family: "Inter Bold"
      src: url($base-url + "fonts/Inter-Bold.otf") format("opentype")
+     font-display: swap
 
 @font-face
      font-family: "Inter Light"
      src: url($base-url + "fonts/Inter-Light.otf") format("opentype")
+     font-display: swap
 
 @font-face
      font-family: "Inter Thin"
      src: url($base-url + "fonts/Inter-Thin.otf") format("opentype")
+     font-display: swap
