--- a/templates/shortcodes/image.html
+++ b/templates/shortcodes/image.html
@@ -2,4 +2,4 @@
     {% set image = resize_image(path=path, width=width, height=height, op = "fit") %}
     {% set path = image.url %}
 {% endif %}
-<p><img src="{{ path }}" {% if alt %}alt="{{ alt }}"{% endif %} width="100%" {% if width and height %}style="aspect-ratio: {{width}}/{{height}};"{% endif %}></p>
+<p><img src="{{ path }}" {% if alt %}alt="{{ alt }}"{% endif %} width="100%" {% if width and height %}style="aspect-ratio: {{width}}/{{height}};"{% endif %} decoding="async" loading="lazy"></p>
