improved loading experience with fallback font-family

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -72,7 +72,7 @@ footer #license
 
 // === titles
 h1, h2, h3, h4, h5, h6
-  font-family: "Inter Regular"
+  font-family: "Inter Regular", sans-serif
 
 h1
   margin: 0.5em 0
