--- a/sass/tweak.sass
+++ b/sass/tweak.sass
@@ -65,9 +65,22 @@ nav, .card, pre
   border-radius: 5px
 .button:hover
   background-color: $theme-main
+.deactivated
+  background-color: $card-background
+  color: $body-color-light
+  pointer-events: none
+  cursor: default
 
 // pdf embeds
 .pdf
   width: 100%
   aspect-ratio: 4 / 3
   height: 100%
+
+.centerflex
+  display: flex
+  flex-direction: row
+  justify-content: center
+  align-items: center
+  margin-bottom: 1em
+  gap: 1em
