--- a/templates/macros.html
+++ b/templates/macros.html
@@ -56,3 +56,14 @@
     });
 </script>
 {% endmacro katex %}
+
+{# === PAGENAV ===#}
+{% macro pagenav(paginator) %}
+<div class="centerflex">
+  <a class="button {% if not paginator.previous %}deactivated{% endif %}" href="{{ paginator.first }}">Erste</a>
+  <a class="button {% if not paginator.previous %}deactivated{% endif %}" href="{{ paginator.previous }}">Vorherige</a>
+  Seite {{ paginator.current_index }} von {{ paginator.number_pagers }}
+  <a class="button {% if not paginator.next %}deactivated{% endif %}" href="{{ paginator.next }}">Nächste</a>
+  <a class="button {% if not paginator.next %}deactivated{% endif %}" href="{{ paginator.last }}">Letzte</a>
+</div>
+{% endmacro pagenav %}
