--- a/sass/tweak.sass
+++ b/sass/tweak.sass
@@ -84,3 +84,11 @@ nav, .card, pre
   align-items: center
   margin-bottom: 1em
   gap: 1em
+
+.gapped
+  display: flex
+  gap: 1em
+
+@media (max-width: 22.5em)
+  .centerflex
+    flex-direction: column
