--- a/templates/section.html
+++ b/templates/section.html
@@ -45,7 +45,7 @@
 </section>
 {% endif %}
 {% if paginator %}
-<section>
+<section style="padding-bottom: 1em;">
   {{ macros::pagenav(paginator=paginator) }}
 </section>
 {% endif %}
