--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <header>
       <a href="{{config.base_url}}">
         <div class="centerflex">
-          <h1><img id="title_pic" alt="" src="{{config.extra.title_pic}}"/></h1>
+          <h1 class="gapped"><img id="title_pic" alt="" src="{{config.extra.title_pic}}"/></h1>
           <h1>{{config.extra.title}}</h1>
         </div>
       </a>
