improve layout consistency across pages

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -10,6 +10,8 @@ body
   font-family: sans-serif
   background-color: $body-background
   color: $body-color
+  // for consistent layout position across sites:
+  overflow-y: scroll
 body p, body ul, body ol
   font-size: 90%
 
