--- a/sass/base.sass
+++ b/sass/base.sass
@@ -26,6 +26,7 @@ header a:hover
 // === nav
 nav
   background-color: $nav-background
+  text-align: center
 nav a
   padding: 0.5em 1.5em
   display: inline-block
