--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
   <title>{% block title %}{{config.extra.title}}{% endblock title %}</title>
   <meta name="description" content="{% block description %}{{config.extra.description}}{% endblock description %}">
   <link rel="stylesheet" type="text/css" href="{{get_url(path="base.css")}}">
+  <link rel="icon" href="/favicon.ico">
 
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="{{ config.extra.title }}" />
